@@ -65,6 +65,8 @@ dpkg (1.16.2) UNRELEASED; urgency=low
   * Add missing --status-logger to dpkg --help output.
   * Do not print bogus errno string for invalid package names in dpkg
     --ignore-depends option.
+  * Change dpkg-query to not load the available file by default for --list
+    and --show, add a new --load-avail option to expose the old behaviour.
 
   [ Raphaël Hertzog ]
   * Update Dpkg::Shlibs to look into multiarch paths when cross-building
